--- a/.github/actions/setup-pyk-env/action.yml
+++ b/.github/actions/setup-pyk-env/action.yml
@@ -14,9 +14,7 @@ runs:
       with:
         python-version: ${{ inputs.python-version }}
     - name: 'Install Poetry'
-      uses: Gr1N/setup-poetry@v9
-      with:
-        poetry-version: '2.1.1'
+      uses: astral-sh/setup-uv@v6
     - name: 'Install package'
       shell: bash
-      run: poetry -C pyk install
+      run: uv --project pyk sync
