--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -489,10 +489,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Poetry
-        uses: Gr1N/setup-poetry@v9
-        with:
-          poetry-version: '2.1.1'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
       - name: Build pyk
         working-directory: pyk
