--- a/.github/actions/setup-pyk-env/action.yml
+++ b/.github/actions/setup-pyk-env/action.yml
@@ -13,8 +13,14 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
-    - name: 'Install Poetry'
+    - name: 'Get uv release'
+      id: uv_release
+      run: |
+        echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
+    - name: 'Install uv'
       uses: astral-sh/setup-uv@v6
+      with:
+        version: ${{ steps.uv_release.outputs.uv_version }}
     - name: 'Install package'
       shell: bash
       run: uv --project pyk sync
