--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,8 +127,9 @@ jobs:
           set -euxo pipefail
           version=$(cat package/version)
           version_tag=ubuntu-noble-${version}
+          UV_VERSION=$(cat deps/uv_release)
           docker login --username rvdockerhub --password "${DOCKERHUB_PASSWORD}"
-          docker image build . --file package/docker/Dockerfile.ubuntu-noble --tag "${DOCKERHUB_REPO}:${version_tag}"
+          docker image build . --file package/docker/Dockerfile.ubuntu-noble --tag "${DOCKERHUB_REPO}:${version_tag}" --build-arg UV_VERSION=${UV_VERSION}
           docker run --name "k-package-docker-test-noble-${GITHUB_SHA}" --rm -it --detach "${DOCKERHUB_REPO}:${version_tag}"
           docker exec -t "k-package-docker-test-noble-${GITHUB_SHA}" bash -c 'cd ~ && echo "module TEST imports BOOL endmodule" > test.k'
           docker exec -t "k-package-docker-test-noble-${GITHUB_SHA}" bash -c 'cd ~ && kompile test.k --backend llvm'
@@ -187,8 +188,9 @@ jobs:
           set -euxo pipefail
           version=$(cat package/version)
           version_tag=ubuntu-jammy-${version}
+          UV_VERSION=$(cat deps/uv_release)
           docker login --username rvdockerhub --password "${DOCKERHUB_PASSWORD}"
-          docker image build . --file package/docker/Dockerfile.ubuntu-jammy --tag "${DOCKERHUB_REPO}:${version_tag}"
+          docker image build . --file package/docker/Dockerfile.ubuntu-jammy --tag "${DOCKERHUB_REPO}:${version_tag}" --build-arg UV_VERSION=${UV_VERSION}
           docker run --name "k-package-docker-test-jammy-${GITHUB_SHA}" --rm -it --detach "${DOCKERHUB_REPO}:${version_tag}"
           docker exec -t "k-package-docker-test-jammy-${GITHUB_SHA}" bash -c 'cd ~ && echo "module TEST imports BOOL endmodule" > test.k'
           docker exec -t "k-package-docker-test-jammy-${GITHUB_SHA}" bash -c 'cd ~ && kompile test.k --backend llvm'
@@ -489,8 +491,15 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install uv
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
+
+      - name: 'Install uv'
         uses: astral-sh/setup-uv@v6
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
 
       - name: Build pyk
         working-directory: pyk
