--- a/package/docker/Dockerfile.ubuntu-jammy
+++ b/package/docker/Dockerfile.ubuntu-jammy
@@ -10,16 +10,20 @@ RUN    apt-get update                   \
                         git             \
                         python3         \
                         python3-pip     \
-                        pipx
+                        pipx            \
+                        curl
 
 COPY kframework_amd64_ubuntu_jammy.deb /kframework_amd64_ubuntu_jammy.deb
 RUN    apt-get update                                                                   \
     && apt-get upgrade --yes                                                            \
     && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_jammy.deb
 
+ARG UV_VERSION
+RUN    curl -LsSf https://astral.sh/uv/$UV_VERSION/install.sh | sh \
+    && uv --version
+
 COPY pyk /pyk
-RUN pipx install uv           \
-    && pipx ensurepath        \
+RUN pipx ensurepath           \
     && . /root/.profile       \
     && cd /pyk                \
     && make build             \
