--- a/.github/actions/setup-pyk-env/action.yml
+++ b/.github/actions/setup-pyk-env/action.yml
@@ -17,7 +17,7 @@ runs:
       id: uv_release
       shell: bash
       run: |
-        echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
+        echo "uv_version=$(cat deps/uv_release)" >> "${GITHUB_OUTPUT}"
     - name: 'Install uv'
       uses: astral-sh/setup-uv@v6
       with:
