--- a/.github/actions/with-k-docker/Dockerfile
+++ b/.github/actions/with-k-docker/Dockerfile
@@ -38,8 +38,9 @@ USER user
 WORKDIR /home/user
 
 ENV PATH=/home/user/.local/bin:${PATH}
-RUN    curl -sSL https://install.python-poetry.org | python3 - --version 2.1.1 \
-    && poetry --version
+ARG UV_VERSION
+RUN    curl -LsSf https://astral.sh/uv/${UV_VERSION}/install.sh | sh \
+    && uv --version
 
 ENV PATH=/home/user/.elan/bin:${PATH}
 RUN    curl -O https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh \
