--- a/.github/actions/with-k-docker/action.yml
+++ b/.github/actions/with-k-docker/action.yml
@@ -43,6 +43,7 @@ runs:
       K_DEB_PATH=${{ inputs.k-deb-path }}
       LLVM_BACKEND_DEB_PATH=llvm-backend.deb
       HASKELL_BACKEND_DEB_PATH=haskell-backend.deb
+      UV_VERSION=$(cat deps/uv_release)
 
       gh release download                           \
         --repo runtimeverification/llvm-backend     \
@@ -63,6 +64,7 @@ runs:
         --build-arg K_DEB_PATH=${K_DEB_PATH}                        \
         --build-arg INSTALL_BACKEND_DEBS=${INSTALL_BACKEND_DEBS}    \
         --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}  \
+        --build-arg "UV_VERSION=${UV_VERSION}"                      \
         --build-arg HASKELL_BACKEND_DEB_PATH=${HASKELL_BACKEND_DEB_PATH}
 
   - name: 'Run Docker container'
