--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,10 +86,36 @@ jobs:
             export PATH="$(nix build github:runtimeverification/kup --no-link --json | jq -r '.[].outputs | to_entries[].value')/bin:$PATH"
             kup publish --verbose k-framework-binary .#k --keep-days 180
             kup publish --verbose k-framework-binary .#k.openssl.procps.secp256k1 --keep-days 180
-      
+
+  test-package-kframework-wheel:
+    name: 'K: Python wheel'
+    runs-on: [self-hosted, linux, normal]
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
+      - name: 'Build kframework wheel'
+        run: |
+          uv build --project pyk
+          cp pyk/dist/kframework-*.whl ./
+      - name: 'Upload kframework package wheel as artifact to the Summary Page'
+        uses: actions/upload-artifact@v4
+        with:
+          name: kframework.whl
+          path: kframework-*.whl
+          if-no-files-found: error
+          retention-days: 1
+
   ubuntu-noble:
     name: 'K Ubuntu Noble Package'
     runs-on: [self-hosted, linux, normal]
+    needs: 'test-package-kframework-wheel'
     timeout-minutes: 90
     steps:
       - uses: actions/checkout@v4
@@ -118,6 +144,10 @@ jobs:
           version=$(cat package/version)
           cp kframework_amd64_ubuntu_noble.deb "kframework_${version}_amd64_ubuntu_noble.deb"
           gh release upload --repo runtimeverification/k --clobber "v${version}" "kframework_${version}_amd64_ubuntu_noble.deb"
+      - name: 'Download kframework.whl'
+        uses: actions/download-artifact@v4
+        with:
+          name: kframework.whl
       - name: 'Build, Test, and Push Dockerhub Image'
         shell: bash {0}
         env:
@@ -127,9 +157,8 @@ jobs:
           set -euxo pipefail
           version=$(cat package/version)
           version_tag=ubuntu-noble-${version}
-          UV_VERSION=$(cat deps/uv_release)
           docker login --username rvdockerhub --password "${DOCKERHUB_PASSWORD}"
-          docker image build . --file package/docker/Dockerfile.ubuntu-noble --tag "${DOCKERHUB_REPO}:${version_tag}" --build-arg "UV_VERSION=${UV_VERSION}"
+          docker image build . --file package/docker/Dockerfile.ubuntu-noble --tag "${DOCKERHUB_REPO}:${version_tag}"
           docker run --name "k-package-docker-test-noble-${GITHUB_SHA}" --rm -it --detach "${DOCKERHUB_REPO}:${version_tag}"
           docker exec -t "k-package-docker-test-noble-${GITHUB_SHA}" bash -c 'cd ~ && echo "module TEST imports BOOL endmodule" > test.k'
           docker exec -t "k-package-docker-test-noble-${GITHUB_SHA}" bash -c 'cd ~ && kompile test.k --backend llvm'
@@ -152,6 +181,7 @@ jobs:
   ubuntu-jammy:
     name: 'K Ubuntu Jammy Package'
     runs-on: [self-hosted, linux, normal]
+    needs: 'test-package-kframework-wheel'
     timeout-minutes: 90
     steps:
       - uses: actions/checkout@v4
@@ -179,6 +209,10 @@ jobs:
           version=$(cat package/version)
           cp kframework_amd64_ubuntu_jammy.deb "kframework_${version}_amd64_ubuntu_jammy.deb"
           gh release upload --repo runtimeverification/k --clobber "v${version}" "kframework_${version}_amd64_ubuntu_jammy.deb"
+      - name: 'Download kframework.whl'
+        uses: actions/download-artifact@v4
+        with:
+          name: kframework.whl
       - name: 'Build, Test, and Push Dockerhub Image'
         shell: bash {0}
         env:
@@ -188,9 +222,8 @@ jobs:
           set -euxo pipefail
           version=$(cat package/version)
           version_tag=ubuntu-jammy-${version}
-          UV_VERSION=$(cat deps/uv_release)
           docker login --username rvdockerhub --password "${DOCKERHUB_PASSWORD}"
-          docker image build . --file package/docker/Dockerfile.ubuntu-jammy --tag "${DOCKERHUB_REPO}:${version_tag}" --build-arg "UV_VERSION=${UV_VERSION}"
+          docker image build . --file package/docker/Dockerfile.ubuntu-jammy --tag "${DOCKERHUB_REPO}:${version_tag}"
           docker run --name "k-package-docker-test-jammy-${GITHUB_SHA}" --rm -it --detach "${DOCKERHUB_REPO}:${version_tag}"
           docker exec -t "k-package-docker-test-jammy-${GITHUB_SHA}" bash -c 'cd ~ && echo "module TEST imports BOOL endmodule" > test.k'
           docker exec -t "k-package-docker-test-jammy-${GITHUB_SHA}" bash -c 'cd ~ && kompile test.k --backend llvm'
