--- a/package/docker/Dockerfile.ubuntu-noble
+++ b/package/docker/Dockerfile.ubuntu-noble
@@ -18,16 +18,9 @@ RUN    apt-get update                                                           
     && apt-get upgrade --yes                                                            \
     && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_noble.deb
 
-ARG UV_VERSION
-RUN    curl -LsSf https://astral.sh/uv/$UV_VERSION/install.sh | sh \
-    && uv --version
-
-COPY pyk /pyk
-RUN pipx ensurepath                                   \
-    && . /root/.profile                               \
-    && cd /pyk                                        \
-    && make build                                     \
-    && pip install dist/*.whl --break-system-packages \
-    && rm -rf /pyk
-
-RUN rm -rf /kframework_amd64_ubuntu_noble.deb
+COPY kframework-*.whl ./
+RUN    pipx ensurepath                                          \
+    && . /root/.profile                                      \
+    && pip install /kframework-*.whl --break-system-packages \
+    && rm -rf /kframework-*                                  \
+    && rm -rf /kframework_amd64_ubuntu_noble.deb
