install `uv` as user in `with-k-docker` Dockerfile

--- a/.github/actions/with-k-docker/Dockerfile
+++ b/.github/actions/with-k-docker/Dockerfile
@@ -29,18 +29,20 @@ RUN apt-get -y clean
 RUN rm /llvm-backend.deb
 RUN rm /kframework.deb
 
-ENV PATH=/usr/bin:${PATH}
-ARG UV_VERSION
-RUN    curl -LsSf https://astral.sh/uv/${UV_VERSION}/install.sh | env UV_INSTALL_DIR="/usr/bin" sh \
-    && uv --version
 
 ARG USER_ID=9876
 ARG GROUP_ID=9876
 RUN    groupadd -g ${GROUP_ID} user \
-    && useradd -m -u ${USER_ID} -s /bin/sh -g user user
+&& useradd -m -u ${USER_ID} -s /bin/sh -g user user
 
 USER user
 WORKDIR /home/user
+
+ENV PATH=/home/user/.local/bin:${PATH}
+
+ARG UV_VERSION
+RUN    curl -LsSf https://astral.sh/uv/${UV_VERSION}/install.sh | sh \
+    && uv --version
 
 ENV PATH=/home/user/.elan/bin:${PATH}
 RUN    curl -O https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh \
