--- a/package/docker/Dockerfile.ubuntu-jammy
+++ b/package/docker/Dockerfile.ubuntu-jammy
@@ -16,11 +16,11 @@ RUN    apt-get update                   \
 COPY kframework_amd64_ubuntu_jammy.deb /kframework_amd64_ubuntu_jammy.deb
 RUN    apt-get update                                                                   \
     && apt-get upgrade --yes                                                            \
-    && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_jammy.deb
+    && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_jammy.deb \
+    && rm /kframework_amd64_ubuntu_jammy.deb
 
 COPY kframework-*.whl ./
-RUN    pipx ensurepath                              \
-    && . /root/.profile                          \
-    && pip install /kframework-*.whl             \
-    && rm -rf /kframework-*                      \
-    && rm -rf /kframework_amd64_ubuntu_jammy.deb
+RUN    pipx ensurepath               \
+    && . /root/.profile              \
+    && pip install /kframework-*.whl \
+    && rm /kframework-*.whl
