--- a/package/docker/Dockerfile.ubuntu-noble
+++ b/package/docker/Dockerfile.ubuntu-noble
@@ -16,11 +16,11 @@ RUN    apt-get update                   \
 COPY kframework_amd64_ubuntu_noble.deb /kframework_amd64_ubuntu_noble.deb
 RUN    apt-get update                                                                   \
     && apt-get upgrade --yes                                                            \
-    && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_noble.deb
+    && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_noble.deb \
+    && rm /kframework_amd64_ubuntu_noble.deb
 
 COPY kframework-*.whl ./
-RUN    pipx ensurepath                                          \
+RUN    pipx ensurepath                                       \
     && . /root/.profile                                      \
     && pip install /kframework-*.whl --break-system-packages \
-    && rm -rf /kframework-*                                  \
-    && rm -rf /kframework_amd64_ubuntu_noble.deb
+    && rm /kframework-*.whl
