--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-/k-distribution/include/kframework/builtin/* @ehildenb @tothtamas28
+/k-distribution/include/kframework/builtin/* @palinatolmach @tothtamas28
 /.github/workflows/* @runtimeverification/admin
-/package/version @ehildenb @rv-jenkins @F-WRunTime @tothtamas28
+/package/version @palinatolmach @rv-jenkins @F-WRunTime @tothtamas28
