Fix Noble Dockerfile, Nix release errors (#4848)
This PR fixes the issues preventing K releases from going through.
Specifically, it
- switches from `pip install` to `pipx install` in Ubuntu Jammy and
Ubuntu Noble (to prevent package versioning issues as seen
[here](https://github.com/runtimeverification/k/actions/runs/16967898838/job/48096671362#step:8:687))
- updates the Nix version to `2.30.1` in all CI workflows (to prevent
Nix version conflicts as seen
[here](https://github.com/runtimeverification/k/actions/runs/17239588825/job/48912830345))

The release job is passing now, as demonstrated by this run:
https://github.com/runtimeverification/k/actions/runs/17242935221.

--- a/package/docker/Dockerfile.ubuntu-noble
+++ b/package/docker/Dockerfile.ubuntu-noble
@@ -19,8 +19,6 @@ RUN    apt-get update                                                           
     && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_noble.deb \
     && rm /kframework_amd64_ubuntu_noble.deb
 
+ENV PIPX_HOME=/opt/pipx PIPX_BIN_DIR=/usr/local/bin
 COPY kframework-*.whl ./
-RUN    pipx ensurepath                                       \
-    && . /root/.profile                                      \
-    && pip install /kframework-*.whl --break-system-packages \
-    && rm /kframework-*.whl
+RUN pipx install /kframework-*.whl && rm /kframework-*.whl
