--- a/.github/workflows/release-debug.yml
+++ b/.github/workflows/release-debug.yml
@@ -187,7 +187,7 @@ jobs:
           # brew tap expects a git repository, so we initialise the current folder as a dummy repo
           git init
           brew tap runtimeverification/k "file:///$(pwd)"
-          brew install ${{ needs.macos-build.outputs.bottle_path }} -v
+          brew install ${{ needs.macos-build.outputs.bottle_path }}
           # cp -R /usr/local/share/kframework/pl-tutorial ~
           # WD=`pwd`
           # cd
