--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -400,6 +400,7 @@ jobs:
     timeout-minutes: 60
     environment: production
     needs: [macos-build, set-release-id]
+    continue-on-error: true
     steps:
       - name: 'Check out matching homebrew repo branch'
         uses: actions/checkout@v4
@@ -497,15 +498,6 @@ jobs:
           cd homebrew-k
           git commit -m 'Update brew package version' Formula/kframework.rb
           git push origin master
-
-      - name: 'Delete Release'
-        if: failure()
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo
-            await github.rest.repos.deleteRelease({ owner, repo, release_id: ${{ needs.set-release-id.outputs.release_id }} })
 
   release:
     name: 'Publish Release'
