--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -457,7 +457,11 @@ jobs:
           # brew tap expects a git repository, so we initialise the current folder as a dummy repo
           git init
           brew tap runtimeverification/k "file:///$(pwd)"
-          brew install ${{ needs.macos-build.outputs.bottle_path }} -v
+          # Install the formula using the local bottle file
+          # First, check what files are available
+          ls -la
+          # Try to install using the bottle file pattern like the original script
+          brew install kframework--*.bottle*.tar.gz -v
           # cp -R /usr/local/share/kframework/pl-tutorial ~
           # WD=`pwd`
           # cd
