--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -79,7 +79,7 @@ jobs:
           tag: k-ci-${{ github.sha }}
           os: ubuntu
           distro: jammy
-          llvm: 15
+          llvm: 17
       - name: 'Build and Test K'
         run: docker exec -t "k-ci-${GITHUB_SHA}" /bin/bash -c 'mvn verify -Dspotless.check.skip=true --batch-mode -U'
       - name: 'Tear down Docker'
@@ -100,7 +100,7 @@ jobs:
         with:
           os: ubuntu
           distro: jammy
-          llvm: 15
+          llvm: 17
           build-package: package/debian/build-package jammy kframework
           test-package: package/debian/test-package
       - name: On Failure, Upload the kore-exec.tar.gz file to the Summary Page
@@ -131,7 +131,7 @@ jobs:
         with:
           os: ubuntu
           distro: jammy
-          llvm: 15
+          llvm: 17
           build-package: package/debian/build-package jammy kframework-frontend
           test-package: package/debian/test-frontend-package
       - name: On Failure, Upload the kore-exec.tar.gz file to the Summary Page
@@ -335,3 +335,98 @@ jobs:
         if: always()
         run: |
           docker stop --time=0 k-pyk-regression-${{ github.sha }}
+
+
+  test-macos-build:
+    name: 'K: macOS Build & Test'
+    runs-on: macos-14
+    timeout-minutes: 60
+    needs: code-quality
+    continue-on-error: true # Do not fail PRs due to MacOS builds at this time. Sept. 9, 2025
+    steps:
+      - name: 'Check out code'
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          path: kframework
+
+      - name: 'Check out homebrew repo'
+        uses: actions/checkout@v4
+        with:
+          repository: runtimeverification/homebrew-k
+          path: homebrew-k
+          ref: master
+
+      - name: 'Mac Dependencies'
+        run: |
+          # Via: https://github.com/ledger/ledger/commit/1eec9f86667cad3b0bbafb82a83739a0d30ca09f
+          # Unlink and re-link to prevent errors when github mac runner images
+          # install python outside of brew, for example:
+          # https://github.com/orgs/Homebrew/discussions/3895
+          # https://github.com/actions/setup-python/issues/577
+          # https://github.com/actions/runner-images/issues/6459
+          # https://github.com/actions/runner-images/issues/6507
+          # https://github.com/actions/runner-images/issues/2322
+
+          # shellcheck disable=SC2162
+          brew list -1 | grep python | while read formula; do brew unlink "$formula"; brew link --overwrite "$formula"; done
+
+          # uninstall pre-installed cmake
+          brew uninstall cmake
+
+      - name: 'Build brew bottle'
+        id: build
+        env:
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
+          MAVEN_OPTS: >-
+              -Dhttp.keepAlive=false
+              -Dmaven.wagon.http.pool=false
+              -Dmaven.wagon.httpconnectionManager.ttlSeconds=30
+        run: |
+          PACKAGE=kframework
+          VERSION=$(cat kframework/package/version)
+          ROOT_URL='https://github.com/runtimeverification/k/releases/download'
+          wget "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz"
+          cd homebrew-k
+          ../kframework/package/macos/brew-update-to-local "${PACKAGE}" "${VERSION}"
+          git commit "Formula/$PACKAGE.rb" -m "Update ${PACKAGE} to ${VERSION}: part 1"
+          ../kframework/package/macos/brew-build-and-update-to-local-bottle "${PACKAGE}" "${VERSION}" "${ROOT_URL}"
+          git reset HEAD^
+          LOCAL_BOTTLE_NAME=$(basename "$(find . -name "kframework--${VERSION}.arm64_sonoma.bottle*.tar.gz")")
+          # shellcheck disable=2001
+          BOTTLE_NAME=$(echo "${LOCAL_BOTTLE_NAME#./}" | sed 's!kframework--!kframework-!')
+          ../kframework/package/macos/brew-update-to-final "${PACKAGE}" "${VERSION}" "${ROOT_URL}"
+          echo "path=${LOCAL_BOTTLE_NAME}" >> "${GITHUB_OUTPUT}"
+          echo "path_remote=${BOTTLE_NAME}" >> "${GITHUB_OUTPUT}"
+
+      - name: 'Test brew bottle installation'
+        id: test
+        env:
+          # github actions sets the JAVA_HOME variable to Java 8 explicitly for
+          # some reason. There doesn't seem to be a way to tell it to unset the
+          # variable, so instead we just have to tell it to use Java 17
+          # explicitly instead.
+          JAVA_HOME: ${{ env.JAVA_HOME_17_X64 }}
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
+        run: |
+          # Test the bottle installation process
+          cd homebrew-k
+          # brew tap expects a git repository, so we initialise the current folder as a dummy repo
+          git init
+          brew tap runtimeverification/k "file:///$(pwd)"
+          # Test the bottle installation with our fix
+          ls -la
+          brew install kframework--*.bottle*.tar.gz -v
+          # Basic functionality test
+          echo 'module TEST imports BOOL endmodule' > test.k
+          kompile test.k --backend llvm
+          kompile test.k --backend haskell
+          echo "✅ macOS build and test completed successfully"
+
+      - name: 'Upload bottle for debugging'
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-bottle-test
+          path: homebrew-k
+          retention-days: 1
