Fix brew audit usage: use formula name instead of file path
- Use 'brew tap --force-local' to add local formula as tap
- Use 'brew audit --strict kframework' with formula name instead of file path
- This resolves the 'Calling brew audit [path ...] is disabled' error

The correct approach is to tap the local directory and then audit by formula name.

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -414,11 +414,12 @@ jobs:
           # Test the Homebrew formula validation and basic functionality
           cd homebrew-k
           
-          # Validate the formula syntax directly
-          brew audit --strict Formula/kframework.rb
+          # Validate the formula syntax by installing it as a local tap
+          brew tap --force-local runtimeverification/k .
+          brew audit --strict kframework
           
-          # Test formula installation from source using the local formula
-          brew install --build-from-source Formula/kframework.rb -v
+          # Test formula installation from source
+          brew install --build-from-source kframework -v
           
           # Basic functionality test
           echo 'module TEST imports BOOL endmodule' > test.k
