--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -400,6 +400,7 @@ jobs:
     timeout-minutes: 60
     environment: production
     needs: [macos-build, set-release-id]
+    continue-on-error: true
     steps:
       - name: 'Check out matching homebrew repo branch'
         uses: actions/checkout@v4
@@ -456,7 +457,11 @@ jobs:
           # brew tap expects a git repository, so we initialise the current folder as a dummy repo
           git init
           brew tap runtimeverification/k "file:///$(pwd)"
-          brew install ${{ needs.macos-build.outputs.bottle_path }} -v
+          # Install the formula using the local bottle file
+          # First, check what files are available
+          ls -la
+          # Try to install using the bottle file pattern like the original script
+          brew install kframework--*.bottle*.tar.gz -v
           # cp -R /usr/local/share/kframework/pl-tutorial ~
           # WD=`pwd`
           # cd
@@ -497,15 +502,6 @@ jobs:
           cd homebrew-k
           git commit -m 'Update brew package version' Formula/kframework.rb
           git push origin master
-
-      - name: 'Delete Release'
-        if: failure()
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo } = context.repo
-            await github.rest.repos.deleteRelease({ owner, repo, release_id: ${{ needs.set-release-id.outputs.release_id }} })
 
   release:
     name: 'Publish Release'
