--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -298,7 +298,7 @@ jobs:
 
   macos-build:
     name: 'Build MacOS Package'
-    runs-on: macos-26
+    runs-on: macos-latest
     timeout-minutes: 120
     environment: production
     needs: [set-release-id, source-tarball]
@@ -396,7 +396,7 @@ jobs:
 
   macos-test:
     name: 'Test MacOS Package'
-    runs-on: macos-26
+    runs-on: macos-latest
     timeout-minutes: 60
     environment: production
     needs: [macos-build, set-release-id]
