Stack some Changes from PR #4857
- Pull Changes from PR 4857
- Specify java 17 for macos teting

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -344,6 +344,11 @@ jobs:
     needs: code-quality
     continue-on-error: true # Do not fail PRs due to MacOS builds at this time. Oct. 6, 2025
     steps:
+      - name: 'Set up Java 17'
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: 17
       - name: 'Check out code'
         uses: actions/checkout@v4
         with:
