Modify WF for Bew Bottle Testing
- Fixed the brew tap command format: Changed from brew tap runtimeverification/k . to brew tap runtimeverification/k "file://$(pwd)" to use the proper file:// URL format that Homebrew expects.
- Added tap cleanup: Added brew untap runtimeverification/k 2>/dev/null || true before the tap command to remove any existing tap that might have a different remote configuration, preventing the "remote mismatch" error.

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -439,8 +439,11 @@ jobs:
           # Test the Homebrew formula validation and basic functionality
           cd homebrew-k
           
+          # Remove any existing tap to avoid remote mismatch errors
+          brew untap runtimeverification/k 2>/dev/null || true
+          
           # Validate the formula syntax by installing it as a local tap
-          brew tap runtimeverification/k .
+          brew tap runtimeverification/k "file://$(pwd)"
           brew audit --strict kframework
           
           # Test formula installation from source
