Reverting testing. UPdating release to use 'uses with nix, and add package jq

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,18 +80,21 @@ jobs:
           name: k-framework-binary
 
       - name: 'Publish K to k-framework-binary cache'
+        uses: workflow/nix-shell-action@v3.3.2
         env:
           CACHIX_AUTH_TOKEN: '${{ secrets.CACHIX_PRIVATE_KFB_TOKEN }}'
           GC_DONT_GC: '1'
-        run: |
-          # Install kup
-          export PATH="$(nix build github:runtimeverification/kup --no-link --json | jq -r '.[].outputs | to_entries[].value')/bin:$PATH"
-          
-          # Publish all three package variants using kup publish
-          # Using public macOS runner has proven reliable for large file uploads
-          kup publish --verbose k-framework-binary .#k --keep-days 180
-          kup publish --verbose k-framework-binary .#k.openssl.secp256k1 --keep-days 180
-          kup publish --verbose k-framework-binary .#k.openssl.procps.secp256k1 --keep-days 180
+        with:
+          packages: jq
+          script: |
+            # Install kup
+            export PATH="$(nix build github:runtimeverification/kup --no-link --json | jq -r '.[].outputs | to_entries[].value')/bin:$PATH"
+            
+            # Publish all three package variants using kup publish
+            # Using public macOS runner has proven reliable for large file uploads
+            kup publish --verbose k-framework-binary .#k --keep-days 180
+            kup publish --verbose k-framework-binary .#k.openssl.secp256k1 --keep-days 180
+            kup publish --verbose k-framework-binary .#k.openssl.procps.secp256k1 --keep-days 180
 
   cachix-release-dependencies:
     name: 'k-framework cachix release'
