Testing build K and Publish to Cachix (#4895)
## Fix macOS Cachix upload timeouts by switching to public runner

### Problem
The K Framework release workflow was experiencing "Connection reset by
peer" errors when uploading large files to Cachix on macOS. This
occurred during multipart uploads of large dependencies (e.g.,
`hs-backend-booster-dev-tools` ~748MB) when using `kup publish` on the
self-hosted macOS runner.

### Solution
Switch from the self-hosted macOS runner (`self-macos-latest`) to the
public GitHub-hosted macOS runner (`macos-latest`). Testing confirmed
that `kup publish` works reliably on the public runner, eliminating the
need for more complex workarounds.

### Changes
- **`.github/workflows/release.yml`**: Changed macOS runner from
`self-macos-latest` to `macos-latest` (public runner)
- The `kup publish` commands remain unchanged - no need to replace with
direct `cachix push`
- All three package variants (`.k`, `.k.openssl.secp256k1`,
`.k.openssl.procps.secp256k1`) continue to be published with 180-day
retention

### Testing
Added a [test
job](https://github.com/runtimeverification/k/actions/runs/20732226383/job/59522438372?pr=4895#step:5:14)
in `test-pr.yml` that validated `kup publish` works successfully on the
public macOS runner with large file uploads.

### Impact
- Minimal code changes (just runner configuration)
- Maintains existing `kup publish` workflow
- Fixes upload timeout issues on macOS
- No functional changes to the publishing process

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,12 @@ jobs:
         include:
           - runner: ubuntu-24.04
             os: ubuntu-24.04
-          - runner: self-macos-latest
-            os: self-macos-latest
+          # Using macos-latest (public runner) instead of self-macos-latest (self-hosted)
+          # because the public runner has proven more reliable for large file uploads.
+          # The condition !startsWith(matrix.os, 'self') ensures Nix/Cachix are installed
+          # on public runners (they're pre-installed on self-hosted runners).
+          - runner: macos-latest
+            os: macos-15
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 120
     steps:
@@ -83,7 +87,11 @@ jobs:
         with:
           packages: jq
           script: |
+            # Install kup
             export PATH="$(nix build github:runtimeverification/kup --no-link --json | jq -r '.[].outputs | to_entries[].value')/bin:$PATH"
+            
+            # Publish all three package variants using kup publish
+            # Using public macOS runner has proven reliable for large file uploads
             kup publish --verbose k-framework-binary .#k --keep-days 180
             kup publish --verbose k-framework-binary .#k.openssl.secp256k1 --keep-days 180
             kup publish --verbose k-framework-binary .#k.openssl.procps.secp256k1 --keep-days 180
